# TurnBasedEQ

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
client/: CMakeLists.txt
client/net/: LocalClusterLauncher.cpp  LocalClusterLauncher.hpp  LoginProfiler.cpp  LoginProfiler.hpp  ZoneClient.cpp  ZoneClient.hpp
client/render/: AnimationTypes.hpp  EntityRenderer.cpp  EntityRenderer.hpp  SpriteAtlas.cpp  SpriteAtlas.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  TextureCache.cpp  TextureCache.hpp  TilemapRenderer.cpp  TilemapRenderer.hpp
client/render/procedural/: ItemIconGenerator.cpp  ItemIconGenerator.hpp  SpriteGenerator.cpp  SpriteGenerator.hpp  TileGenerator.cpp  TileGenerator.hpp
client/src/: main.cpp
client/ui/: GameWindow.cpp  GameWindow.hpp  MechanicToolbar.cpp  MechanicToolbar.hpp  WindowLayoutManager.cpp  WindowLayoutManager.hpp
client/ui/combat/: CombatWindow.cpp  CombatWindow.hpp
client/ui/debug/: DebugMenu.cpp  DebugMenu.hpp  LogViewer.cpp  LogViewer.hpp  UnitTestRunner.cpp  UnitTestRunner.hpp
client/ui/dialog/: NpcDialogWindow.cpp  NpcDialogWindow.hpp
client/ui/inventory/: InventoryWindow.cpp  InventoryWindow.hpp
client/ui/look/: LookWindow.cpp  LookWindow.hpp
client/ui/merchant/: MerchantWindow.cpp  MerchantWindow.hpp
client/ui/skills/: SkillsWindow.cpp  SkillsWindow.hpp
cmake/: TbeqCompilerCache.cmake  VcpkgToolchain.cmake
data/: abilities.json  boss_scripts.json  classes.json  entity_sprites.json  items.json  mobs.json  npcs.json  races.json  skill_caps.json  skills.json  spells.json  tile_defs.json  tile_styles.json
data/ai/: class_combat_profiles.json
data/sprites/: ATTRIBUTION.md
data/worldgen/: world_rules.json  zone_templates.json
docs/: DOCUMENTATION.md  architecture-overview.md  auth.md  build-and-run.md  client.md  combat-system.md  content-and-data.md  cpp-architecture.md  data-models.md  module-reference.md  networking.md  server.md  shared.md  testing.md
scripts/: bootstrap_third_party.ps1  build-fast.ps1  generate_world.ps1  run-dev.ps1  run_cluster.ps1
server/: CMakeLists.txt
server/common/debug/: DebugCommandHandler.cpp  DebugCommandHandler.hpp
server/common/net/: TcpConnection.cpp  TcpConnection.hpp
server/world_login/: WorldLoginServer.cpp  WorldLoginServer.hpp  main.cpp
server/zone/: ZoneServer.cpp  ZoneServer.hpp  ZoneServerInventory.cpp  ZoneServerProgression.cpp  main.cpp
server/zone/combat/: CombatManager.cpp  CombatManager.hpp
shared/: CMakeLists.txt
shared/include/tbeq/ai/: ClassCombatBrain.hpp  ClassCombatProfile.hpp  PartyMemberAI.hpp
shared/include/tbeq/auth/: CharacterValidation.hpp  PasswordHash.hpp
shared/include/tbeq/combat/: BossScriptCatalog.hpp  CombatInstance.hpp  CombatTypes.hpp  RaidCombatInstance.hpp
shared/include/tbeq/content/: AbilityCatalog.hpp  ItemCatalog.hpp  MobCatalog.hpp  NpcCatalog.hpp  SkillCapCatalog.hpp  SkillCatalog.hpp  SpellCatalog.hpp
shared/include/tbeq/core/: CharacterState.hpp  Config.hpp  Log.hpp
shared/include/tbeq/items/: ItemRules.hpp
shared/include/tbeq/net/: ClientPackets.hpp  DebugCommands.hpp  PacketHeader.hpp  PacketSerializer.hpp  PacketTypes.hpp  ServerPackets.hpp
shared/include/tbeq/npc/: DialogTree.hpp  InteractionResolver.hpp
shared/include/tbeq/persistence/: Database.hpp
shared/include/tbeq/skills/: Progression.hpp  SkillDef.hpp  SkillResolver.hpp
shared/include/tbeq/social/: ChatChannel.hpp  Invite.hpp
shared/include/tbeq/world/: TileDefCatalog.hpp  ZoneGrid.hpp
shared/include/tbeq/worldgen/: PortalPlacementResolver.hpp  WorldBootstrap.hpp  WorldGenTypes.hpp  WorldGenerator.hpp  WorldLayoutGraph.hpp  WorldValidator.hpp  ZoneGenerator.hpp  ZoneLayoutUtils.hpp  ZoneTypeCatalog.hpp
shared/src/ai/: ClassCombatBrain.cpp  ClassCombatProfileCatalog.cpp  PartyMemberAI.cpp
shared/src/auth/: CharacterValidation.cpp  PasswordHash.cpp
shared/src/combat/: BossScriptCatalog.cpp  CombatInstance.cpp
shared/src/content/: AbilityCatalog.cpp  ItemCatalog.cpp  MobCatalog.cpp  NpcCatalog.cpp  SkillCapCatalog.cpp  SkillCatalog.cpp  SpellCatalog.cpp
shared/src/core/: CharacterState.cpp  Config.cpp  Log.cpp
shared/src/items/: ItemRules.cpp
shared/src/net/: PacketSerializer.cpp
shared/src/npc/: DialogTree.cpp  InteractionResolver.cpp
shared/src/persistence/: Database.cpp
shared/src/skills/: Progression.cpp  SkillResolver.cpp
shared/src/social/: ChatChannel.cpp  Invite.cpp
shared/src/world/: TileDefCatalog.cpp  ZoneGrid.cpp
shared/src/worldgen/: PortalPlacementResolver.cpp  WorldBootstrap.cpp  WorldGenerator.cpp  WorldLayoutGraph.cpp  WorldValidator.cpp  ZoneGenerator.cpp  ZoneLayoutUtils.cpp  ZoneTypeCatalog.cpp
tests/: CMakeLists.txt
tests/helpers/: HeadlessClient.cpp  HeadlessClient.hpp  TempDatabase.cpp  TempDatabase.hpp  TestCluster.cpp  TestCluster.hpp
tests/integration/: ai_party_combat_test.cpp  cluster_registers_test.cpp  combat_encounter_test.cpp  login_and_handoff_test.cpp  lorekeeper_interact_test.cpp  merchant_buy_test.cpp  stuck_command_test.cpp  two_players_and_portal_test.cpp
tests/unit/ai/: class_combat_brain_test.cpp
tests/unit/auth/: auth_test.cpp
tests/unit/net/: packet_roundtrip_test.cpp
tests/unit/render/: sprite_generator_test.cpp  tile_generator_test.cpp
tests/unit/server/: debug_command_test.cpp
tests/unit/shared/: combat_flee_test.cpp  combat_hit_miss_test.cpp  combat_initiative_test.cpp  equip_rules_test.cpp  merchant_pricing_test.cpp  npc_catalog_test.cpp  progression_test.cpp  spell_combat_test.cpp
tests/unit/ui/: ui_layout_test.cpp
tests/unit/world/: collision_test.cpp
tests/unit/worldgen/: world_validator_test.cpp
tools/: CMakeLists.txt  build_entity_sprites.py
tools/data_validator/: main.cpp
tools/worldgen/: main.cpp
